[gd_scene load_steps=2 format=3 uid="uid://bbuof52sbo4f5"]

[ext_resource type="Script" path="res://addons/goban/Scripts/card.gd" id="1_j07er"]

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(400, 100)
script = ExtResource("1_j07er")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 2

[node name="ChapterList" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="CardName" type="Label" parent="MC/ChapterList"]
layout_mode = 2
text = "Test Example"
horizontal_alignment = 1

[node name="AddChapter" type="Button" parent="MC/ChapterList"]
layout_mode = 2
theme_type_variation = &"white_btn"
text = "Add New Chapter"

[node name="HSeparator" type="HSeparator" parent="MC/ChapterList"]
layout_mode = 2

[connection signal="pressed" from="MC/ChapterList/AddChapter" to="." method="_on_add_chapter_pressed"]
